syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryResponse {
  Category category = 1;
}

message CategoryListResponse {
  repeated Category categories = 1;
}

message Blank {}

message CategoryGetRequest {
  string id = 1;
}

service CategoryService {
  rpc createCategory(CreateCategoryRequest) returns (Category) {}
  rpc listCategories(Blank) returns (CategoryListResponse) {}
  rpc getCategory(CategoryGetRequest) returns (Category) {}
}
